[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.49.0", features = ["full"] }
yahoo_finance_api = "4.1.0"
